# langchain-crash-course

./: pyproject.toml
1_chat_models/: 1_chat_model_basic.py  2_chat_model_basic_conversation.py  4_chat_model_conversation_with_user.py
4_rag/: 1a_rag_basics.py  1b_rag_basics.py
